# opam

./: .gitignore  CHANGES  Makefile  Makefile.config.in  appveyor.yml  appveyor_test.sh  configure  configure.ac  master_changes.md  opam-client.opam  opam-core.opam  opam-devel.opam  opam-format.opam  opam-installer.opam  opam-repository.opam  opam-solver.opam  opam-state.opam
.github/scripts/: archives-cache.sh  ci.ml  cygwin.cmd  legacy-cache.sh  legacy.sh
.github/workflows/: ci.ml  ci.yml  depexts.yml  macos.yml  main.yml  ubuntu.yml  windows.yml
doc/: Makefile  index.html  modules
doc/man/: dune  dune_man.ml  opam-admin-topics.inc  opam-topics.inc
doc/pages/: Install.md
release/: Makefile  readme.md  release.sh
shell/: install.ps1  install.sh
src/: ocaml-flags-standard.sexp
src/client/: dune  linking.sexp  opamAction.ml  opamAdminCheck.ml  opamAdminCheck.mli  opamAdminCommand.ml  opamAdminRepoUpgrade.ml  opamArg.ml  opamArg.mli  opamArgTools.ml  opamAuxCommands.ml  opamCLIVersion.ml  opamCLIVersion.mli  opamCliMain.ml  opamClient.ml  opamClient.mli  opamClientConfig.ml  opamClientConfig.mli  opamCommands.ml  (+12 more)
src/solver/: dune  opamActionGraph.ml  opamBuiltin0install.ml  opamBuiltin0install.ml.real  opamBuiltin0install.real.ml  opamBuiltinMccs.real.ml  opamBuiltinZ3.real.ml  opamBuiltinZI.ml.dummy  opamBuiltinZI.ml.real  opamCudf.ml  opamCudf.mli  opamCudfAux.ml  opamCudfSolver.ml  opamCudfSolverSig.ml  opamSolver.ml  opamSolver.mli  opamSolverConfig.ml  opamSolverConfig.mli
src_ext/: Makefile  Makefile.dune  Makefile.packages  Makefile.sources
(+128 files in other folders)
