(library
  (name        opam_solver)
  (public_name opam-solver)
  (synopsis    "OCaml Package Manager solver interaction library")
  (libraries   opam-format cudf dose3.algo
               (select opamBuiltinMccs.ml from
;;               (mccs -> opamBuiltinMccs.ml.real)
                 (     -> opamBuiltinMccs.ml.dummy))
               (select opamBuiltinZI.ml from
                 (opam-zi -> opamBuiltinZI.ml.real)
                 (        -> opamBuiltinZI.ml.dummy)))
  (modules_without_implementation opamBuiltinZ3)
  (flags       (:standard
               (:include ../ocaml-flags-standard.sexp)
               (:include ../ocaml-flags-configure.sexp)
               (:include ../ocaml-context-flags.sexp)))
  (wrapped     false))
